Add GUI editor for R backend

Summary:
Before, if we have called `fix` function and our `EDITOR` was console editor, we have had problems: editor starts as child process and we never can end it. This commit fix it, by building cantor script editor as executable file and setting the editor as editor for R.

BUG: 339127
FIXED-IN: 18.04.1

Test Plan:
1) Open terminal, set console editor as EDITOR (`export EDITOR=/bin/nano`, for example) and start cantor in this terminal session.
2) Start R backend, create array (`a <- c(1,2,3)`, for example)
3) Call `fix(a)` and check, that you have the problem
4) Apply the patch
5) Do 1)-2) again and check, that you start edit `a` in kate

Reviewers: #cantor, asemke

Reviewed By: #cantor, asemke

Subscribers: #cantor, #kde_edu

Tags: #kde_edu, #cantor

Differential Revision: https://phabricator.kde.org/D12721