src/scripteditor/scripteditorwidget.h
@@ -38,6 +38,7 @@ class ScriptEditorWidget : public KXmlGuiWindow
   public:
     explicit ScriptEditorWidget( const QString& filter, const QString& highlightingMode, QWidget* parent = nullptr );
     ~ScriptEditorWidget() override;
+    void open(QUrl url);
 
   Q_SIGNALS:
     void runScript(const QString& filename);
